# texture3

./: .gitignore  CMakeLists.txt  Info.plist.in  Makefile  README.md  box.cpp  main.cpp  trackball.cpp
texture3.xcode/: project.pbxproj  tokoi.mode1  tokoi.pbxuser
texture3.xcodeproj/: project.pbxproj
